--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,18 +1,16 @@
-name: Events Demo 1
-on: ...
-jobs:
-  deploy:
+name: Test project
+on: push 
+jobs: 
+  test: 
     runs-on: ubuntu-latest
     steps:
-      - name: Output event data
-        run: echo "${{ toJSON(github.event) }}"
       - name: Get code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+      - name: Install NodeJS
+        uses: actions/setup-node@v4
+        with: 
+          node-version: 18
       - name: Install dependencies
         run: npm ci
-      - name: Test code
-        run: npm run test
-      - name: Build code
-        run: npm run build
-      - name: Deploy project
-        run: echo "Deploying..."
+      - name: Run tests
+        run: npm test
