--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -8,6 +8,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Install node
         uses: actions/setup-node@v4
+      - name: Install dependencies
+        run: npm ci
       - name: Lint the code
         run: npm run lint
   test:
