--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      js-file: ${{ steps.publish-filename.outputs.javascript-file }}
     steps:
       - name: Get code
         uses: actions/checkout@v4
@@ -25,6 +27,9 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish JS filename
+        id: publish-filename
+        run: find dist/assets/*.js -type f -execdir echo 'javascript-file={}' >>  $GITHUB_OUTPUT ';'
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -40,5 +45,7 @@ jobs:
           name: distribution-files
       - name: Output contents
         run: ls
+      - name: Output JS filename
+        run: echo "${{ needs.build.outputs.js-file }}"
       - name: Deploy
         run: echo "Deploying..."
