--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -13,7 +13,7 @@ jobs:
         id: cache
         uses: actions/cache@v3
         with:
-          path: node-modules
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
@@ -29,7 +29,7 @@ jobs:
         id: cache
         uses: actions/cache@v3
         with:
-          path: node-modules
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
@@ -53,7 +53,7 @@ jobs:
         id: cache
         uses: actions/cache@v3
         with:
-          path: node-modules
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
