--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -10,6 +10,9 @@ jobs:
         include:
           - node-version: 18
             os: ubuntu-latest
+        exclude:
+          - node-version: 12
+            os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: Get code
