--- a/.github/workflows/use-reuseable.yml
+++ b/.github/workflows/use-reuseable.yml
@@ -69,6 +69,9 @@ jobs:
   deploy:
     needs: build
     uses: ./.github/workflows/reuseable-deploy.yml
+    with:
+      artifact-name: dist-files
+
   report:
     needs: [lint, deploy]
     if: failure()
