--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -7,8 +7,17 @@ on:
         required: true
         default: dist
         type: string
+    secrets: 
+      some-secrets:
+        required: false
+    outputs:
+      result:
+        description: The result of the deploy
+        value: ${{ jobs.deploy.outputs.outcome }}
 jobs:
   deploy:
+    outputs:
+      outcome: ${{ steps.set-result.outputs.deploy-result }}
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -18,4 +27,8 @@ jobs:
       - name: List dist files
         run: ls
       - name: Output information
+        id: deploy
         run: echo "Deploying..."
+      - name: Set result output
+        id: set-result
+        run: echo "deploy-result='Success'" >> $GITHUB_OUTPUT
