--- a/.github/workflows/use-reuseable.yml
+++ b/.github/workflows/use-reuseable.yml
@@ -71,7 +71,14 @@ jobs:
     uses: ./.github/workflows/reuseable-deploy.yml
     with:
       artifact-name: dist-files
-
+    # secrets:
+      # some-secret: ${{ secrets.USERNAME }}
+  print-deploy-result:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Print deploy output
+        run: echo "${{ needs.deploy.output.result }}"
   report:
     needs: [lint, deploy]
     if: failure()
