--- a/.github/workflows/use-reuseable.yml
+++ b/.github/workflows/use-reuseable.yml
@@ -75,7 +75,7 @@ jobs:
       # some-secret: ${{ secrets.USERNAME }}
   print-deploy-result:
     runs-on: ubuntu-latest
-    needs: build
+    needs: deploy
     steps:
       - name: Print deploy output
         run: echo "${{ needs.deploy.output.result }}"
