--- a/.github/workflows/use-reuseable.yml
+++ b/.github/workflows/use-reuseable.yml
@@ -78,7 +78,7 @@ jobs:
     needs: deploy
     steps:
       - name: Print deploy output
-        run: echo "${{ needs.deploy.output.result }}"
+        run: echo "${{ needs.deploy.outputs.result }}"
   report:
     needs: [lint, deploy]
     if: failure()
