--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,12 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: Load and cache dependencies
+        id: cache-deps
         uses: ./.github/actions/cached_deps # start path (relative to root) with ./ and don't specify file name
         with:
           caching: 'false'
+      - name: Output information
+        run: echo "Cache used? ${{ steps.cache_deps.outputs.used_cache }}"
       - name: Lint code
         run: npm run lint
   test:
