--- a/.github/actions/deploy-s3-docker/action.yml
+++ b/.github/actions/deploy-s3-docker/action.yml
@@ -1,5 +1,8 @@
-name: 'Deploy to AWS S3'
-description: 'Deploy a static website via AWS S3'
+name: 'Deploy to AWS s3'
+description: 'Deploy'
+runs:
+  using: 'docker'
+  image: 'dockerfile'
 inputs:
   bucket:
     description: 'The S3 bucket name'
@@ -11,8 +14,6 @@ inputs:
   dist-folder:
     description: 'The folder containg the deployable files'
     required: true
-runs:
-  using: 'node16'
-  # pre: setup.js
-  main: 'main.js' # Same folder, so filename is enough
-  # post: cleanup.js
+outputs:
+  website-url:
+    desciption: "The url of the live website"
